feat(talk): simplification UX des talks (#145)
* feat(talk): simplification UX des talks
