# front/shared/api/contract.ts
@@ -29,10 +29,13 @@ export type BackendLocation = Schemas["Location"];
 export type BackendMonthLabel = Schemas["MonthLabel"];
 export type BackendMonthlyActivity = Schemas["MonthlyActivity"];
 export type BackendNotificationPreferences = Schemas["NotificationPreferences"];
+export type BackendOffice = Schemas["Office"];
+export type BackendOfficePreference = Schemas["OfficePreference"];
 export type BackendProfileView = Schemas["ProfileView"];
 export type BackendRole = Schemas["Role"];
 export type BackendRolesUpdateRequest = Schemas["RolesUpdateRequest"];
 export type BackendTalk = Schemas["Talk"];
+export type BackendTalkFormat = Schemas["TalkFormat"];
 export type BackendTalkReviewRequest = Schemas["TalkReviewRequest"];
 export type BackendTalkReviewResponse = Schemas["TalkReviewResponse"];
 export type BackendTalkStatus = Schemas["TalkStatus"];
